--- a/_data/logiciels_libres-open_source_software/firefox.yml
+++ b/_data/logiciels_libres-open_source_software/firefox.yml
@@ -32,8 +32,8 @@ admininstrations:
         contact: 
           email: "sebastien.lemay@canada.ca"
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-13"
         name: 
           en: "Available to all employees (self service)"
           fr: "Disponible pour tous les employés (libre service)"
@@ -41,29 +41,29 @@ admininstrations:
           en: "Upgraded to latest ESR version every month."
           fr: "Mises à jours mensuelles à la dernière version ESR."
   - 
-    adminCode: agr
+    adminCode: aafc-aac
     uses: 
       - 
         contact: 
-          email: ~
+          email: aafc.info.aac@canada.ca
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-13"
         name: 
           en: "Available to developers"
           fr: "Disponible pour les développeur"
         description: 
-          en: ""
-          fr: ""
+          en: "Available to developers"
+          fr: "Available to developers"
   - 
     adminCode: tbs-sct
     uses: 
       - 
         contact: 
-          email: ~
+          email: questions@tbs-sct.gc.ca
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-13"
         name: 
           en: "Available to all employees"
           fr: "Disponible pour tous les employés"
@@ -75,13 +75,13 @@ admininstrations:
     uses: 
       - 
         contact: 
-          email: ~
+          email: webmaster.webmestre@fin.gc.ca
         date: 
-          started: ~
+          created: "2019-05-13"
           metadataLastUpdated: "2019-05-06"
         name: 
-          en: ~
-          fr: ~
+          en: "Development Environment"
+          fr: "Environnement de développement"
         description: 
           en: "APM data"
           fr: "Données du APM"
@@ -90,13 +90,13 @@ admininstrations:
     uses: 
       - 
         contact: 
-          email: ~
+          email: guidelines-lignesdirectrices@fintrac-canafe.gc.ca
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-13"
         name: 
-          en: ~
-          fr: ~
+          en: "Development Environment"
+          fr: "Environnement de développement"
         description: 
           en: "APM data"
           fr: "Données du APM"
