--- a/_data/logiciels_libres-open_source_software/mediawiki.yml
+++ b/_data/logiciels_libres-open_source_software/mediawiki.yml
@@ -28,11 +28,13 @@ admininstrations:
     uses: 
       - 
         contact: 
-          URL: https://github.com/gctools-outilsgc/gcpedia/issues
+          URL: 
+            en: "https://github.com/gctools-outilsgc/gcpedia/issues" 
+            fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-16"
         name: 
           en: "GCpedia"
           fr: "GCpedia"
@@ -41,11 +43,13 @@ admininstrations:
           fr: "Wiki interne du gouvernement du Canada"
       - 
         contact: 
-          URL: https://github.com/gctools-outilsgc/gcpedia/issues
+          URL: 
+            en: "https://github.com/gctools-outilsgc/gcpedia/issues" 
+            fr: "https://github.com/gctools-outilsgc/gcpedia/issues"
           email: "ilia.salem@tbs-sct.gc.ca"
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-16"
         name: 
           en: "GCcollab Wiki"
           fr: "Wiki GCcollab"
@@ -53,17 +57,17 @@ admininstrations:
           en: "External Government of Canada Wiki"
           fr: "Wiki externe du gouvernement du Canada"
   - 
-    adminCode: agr
+    adminCode: aafc-aac
     uses: 
       - 
         contact: 
-          email: ~
+          email: aafc.info.aac@canada.ca
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-16"
         name: 
-          en: ~
-          fr: ~
+          en: "Development Environment"
+          fr: "Environnement de développement"
         description: 
           en: "APM data"
           fr: "Données du APM"
@@ -72,28 +76,13 @@ admininstrations:
     uses: 
       - 
         contact: 
-          email: ~
+          email: webmaster@csc-scc.gc.ca
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-16"
         name: 
-          en: ~
-          fr: ~
-        description: 
-          en: "APM data"
-          fr: "Données du APM"
-  - 
-    adminCode: nrcan
-    uses: 
-      - 
-        contact: 
-          email: ~
-        date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
-        name: 
-          en: ~
-          fr: ~
+          en: "Development Environment"
+          fr: "Environnement de développement"
         description: 
           en: "APM data"
           fr: "Données du APM"
@@ -102,13 +91,13 @@ admininstrations:
     uses: 
       - 
         contact: 
-          email: ~
+          email: reginald.maltais2@canada.ca
         date: 
-          started: ~
-          metadataLastUpdated: "2019-05-06"
+          created: "2019-05-06"
+          metadataLastUpdated: "2019-05-16"
         name: 
-          en: ~
-          fr: ~
+          en: "Development Environment"
+          fr: "Environnement de développement"
         description: 
           en: "APM data"
           fr: "Données du APM"
