--- a/_config.yml
+++ b/_config.yml
@@ -408,6 +408,10 @@ VersionCodeDesc:
   en: The latest version for this project. For example, 1.0.0.
   fr: La version de ce projet. Par  exemple, 1.0.0.
 
+GitHubAccount:
+  en: Information about your Github account
+  fr: Des informations sur votre compte Github
+
 # Open Soruce Software (Schema and Form)
 SchemaVersionOssDesc:
   en: The version of the ORE metadata schema for open source software.
