--- a/_config.yml
+++ b/_config.yml
@@ -408,6 +408,10 @@ VersionCodeDesc:
   en: The latest version for this project. For example, 1.0.0.
   fr: La version de ce projet. Par  exemple, 1.0.0.
 
+InformationAboutSubmitter:
+  en: Information about submitter
+  fr: Des informations sur le déposant
+  
 FormSubmissionInProgress:
   en: The form is being submitted...
   fr: Le formulaire est en cours de soumission...
