Delete Oss yaml files where we don't have data

--- a/_data/logiciels_libres-open_source_software/ansible.yml
+++ b/_data/logiciels_libres-open_source_software/ansible.yml
@@ -28,7 +28,7 @@ admininstrations:
         contact: 
           email: "libre@ville.montreal.qc.ca"
         date: 
-          created: "2017-06-30"
+          started: "2017-06-30"
           metadataLastUpdated: "2019-05-06"
         description: 
           en: "Application Management."
