--- a/_data/logiciels_libres-open_source_software/cassandra.yml
+++ b/_data/logiciels_libres-open_source_software/cassandra.yml
@@ -28,7 +28,7 @@ admininstrations:
         contact: 
           email: "libre@ville.montreal.qc.ca"
         date: 
-          created: "2019-01-31"
+          started: "2019-01-31"
           metadataLastUpdated: "2019-05-10"
         description: 
           en: "Data managment."
