--- a/_data/logiciels_libres-open_source_software/jekyll.yml
+++ b/_data/logiciels_libres-open_source_software/jekyll.yml
@@ -34,7 +34,7 @@ admininstrations:
           en: "Open Resource Exchange"
           fr: "Échange de ressources ouvert"
         date: 
-          created: "2018-01-23"
+          started: "2018-01-23"
           metadataLastUpdated: "2019-05-06"
         description: 
           en: "Github Pages"
