--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ CodeCreated:
   fr: Créé
 CodeStarted:
   en: Started
-  fr: Commencé
+  fr: Lancé
 LastUpdatedCode:
   en: Last updated
   fr: Dernière mise à jour
@@ -196,7 +196,7 @@ CreatedCodeDesc:
   fr: La date du projet lorsqu'elle a été crée, au format AAAA-MM-JJ ou ISO 8601.
 StartedCodeDesc:
   en: The date the project was originally started, in YYYY-MM-DD or ISO 8601 format.
-  fr: La date du projet lorsqu'elle a été commencé, au format AAAA-MM-JJ ou ISO 8601.
+  fr: La date du projet lorsqu'elle a été lancé, au format AAAA-MM-JJ ou ISO 8601.
 LastModifiedCodeDesc:
   en: The date the project was modified, in YYYY-MM-DD or ISO 8601 format.
   fr: La date du projet lorsqu'elle a été modifiée, au format AAAa-MM-JJ ou ISO 8601.
