--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -1,38 +1,69 @@
---- 
-schemaVersion: "1.0"
+schemaVersion: '1.0'
 adminCode: asc-csa
-releases: 
-  - 
-    contact: 
-      URL:
-        en: https://projects.eclipse.org/projects/technology.apogy/contact
-        fr: https://projects.eclipse.org/projects/technology.apogy/contact
-      email: apogy-dev@eclipse.org
-    date: 
-      created: "2015-09-28"
-      metadataLastUpdated: "2019-01-31"
-    description: 
-      en: "The one-stop-shop solution for operating robots, satellites and beyond"
-      fr: "Un logiciel polyvalent pour faire fonctionner des robots et des satellites"
-    languages: 
-      - Java
-    name: 
-      en: Apogy
-      fr: Apogy
-    licenses: 
-      - 
-        URL: 
-          en: "https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE"
-          fr: "https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE"
-        spdxID: EPL-1.0
-    repositoryURL: 
-      en: "https://git.eclipse.org/c/apogy/apogy.git"
-      fr: "https://git.eclipse.org/c/apogy/apogy.git"
-    tags: 
-      en: 
-        - Robots
-        - Space
-      fr: 
-        - Robots
-        - Espace
-    vcs: git
+releases:
+    -
+        contact:
+            URL:
+                en: 'https://projects.eclipse.org/projects/technology.apogy/contact'
+                fr: 'https://projects.eclipse.org/projects/technology.apogy/contact'
+            email: apogy-dev@eclipse.org
+        date:
+            created: '2015-09-28'
+            metadataLastUpdated: '2019-01-31'
+        description:
+            en: 'The one-stop-shop solution for operating robots, satellites and beyond'
+            fr: 'Un logiciel polyvalent pour faire fonctionner des robots et des satellites'
+        languages:
+            - Java
+        name:
+            en: Apogy
+            fr: Apogy
+        licenses:
+            -
+                URL:
+                    en: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
+                    fr: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
+                spdxID: EPL-1.0
+        repositoryURL:
+            en: 'https://git.eclipse.org/c/apogy/apogy.git'
+            fr: 'https://git.eclipse.org/c/apogy/apogy.git'
+        tags:
+            en:
+                - Robots
+                - Space
+            fr:
+                - Robots
+                - Espace
+        vcs: git
+    -
+        contact:
+            URL:
+                en: 'https://projects.eclipse.org/projects/technology.apogy/contact'
+                fr: 'https://projects.eclipse.org/projects/technology.apogy/contact'
+        date:
+            created: 2015-09-28T00:00:00.000Z
+            metadataLastUpdated: 2019-05-17T00:00:00.000Z
+        description:
+            en: da
+            fr: db
+        name:
+            en: testa
+            fr: testb
+        licenses:
+            -
+                URL:
+                    en: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
+                    fr: 'https://git.eclipse.org/c/apogy/apogy.git/tree/LICENSE'
+                    spdxID: EPL-1.0
+        repositoryURL:
+            en: 'https://git.eclipse.org/c/apogy/apogy.git'
+            fr: 'https://git.eclipse.org/c/apogy/apogy.git'
+        status: ""
+        tags:
+            en:
+                - tag1
+                - tag2
+            fr:
+                - tag3
+                - tag4
+        vcs: git
