--- a/_config.yml
+++ b/_config.yml
@@ -391,7 +391,7 @@ TagsCodeEN:
   en: List of English tags
   fr: Liste d'étiquettes en anglais
 TagsCodeFR:
-  en: list of French tags
+  en: List of French tags
   fr: Liste d'étiquettes en français
 
 VcsName:
